fix course list full width whitout scroll bar + correct breadcrumbs alignment

--- a/funsite/static/funsite/css/fun.css
+++ b/funsite/static/funsite/css/fun.css
@@ -308,7 +308,9 @@ div.breadcrumbs-wrapper {
     margin-top: 10px;
     margin-left: 20px;
 }
-
+div.breadcrumbs-alignment {
+    text-align: left;
+}
 ul.breadcrumbs {
     display: block;
     list-style: none;
@@ -318,6 +320,7 @@ ul.breadcrumbs {
     margin: 0;
     padding: 0;
     font-size: 12px;
+    width: 99%;
 }
 ul.breadcrumbs li {
     display: inline;
